5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1734_2508.log
== TEST (2019-05-09 19:27:41) 
-- CODE:
soma=0
i=1
while(1<=n):
	soma=soma+i
	i=i+1
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(1<=n):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:29:16) 
-- CODE:
n=int(input("digite um numero natural:"))
soma=0
i=1
while(1<=n):
	soma=soma+i
	i=i+1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(1<=n):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:19:22) 
-- CODE:
n=int(input("digite um numero natural:"))
soma=0
i=2
while(1<=n):
	soma=soma+i
	i=i+1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(1<=n):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:20:26) 
-- CODE:
n=int(input("digite um numero natural:"))
soma=0
i=1
while(1<=n):
	soma=soma+i
	i=i+2
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(1<=n):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:02:01) 
-- CODE:
n=int(input("digite um numero natural:"))
cont=0
i=1
while(1<n):
	sinal=(-1)**c
	soma=soma+i
	i=i+1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    sinal=(-1)**c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:03:13) 
-- CODE:
n=int(input("digite um numero natural:"))
cont=0
i=1
while(1<n):
	sinal=(-1)**c
	soma=soma+sinal*((x**i))
	i=i+1
print(round(soma,8))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    sinal=(-1)**c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:03:25) 
-- CODE:
n=int(input("digite um numero natural:"))
cont=0
i=1
while(1<n):
	sinal=(-1)**cont
	soma=soma+sinal*((x**i))
	i=i+1
print(round(soma,8))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma=soma+sinal*((x**i))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:03:46) 
-- CODE:
n=int(input("digite um numero natural:"))
cont=0
i=1
soma=0
while(1<n):
	sinal=(-1)**cont
	soma=soma+sinal*((x**i))
	i=i+1
print(round(soma,8))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma=soma+sinal*((x**i))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:04:16) 
-- CODE:
n=int(input("digite um numero natural:"))
cont=0
i=1
soma=0
while(1<n):
	sinal=(-1)**cont
	soma=soma+sinal*((x**i))
	i=i+1+2
print(round(soma,8))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma=soma+sinal*((x**i))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:06:07) 
-- CODE:
n=int(input("digite um numero natural:"))
cont=0
soma=2
while(1<n):
	sinal=(-1)**cont
	cont=cont+2
	soma=soma+(-1)**(cont)*(4/div)
	i=i+1
print(round(soma,8))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma=soma+(-1)**(cont)*(4/div)
NameError: name 'div' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:07:00) 
-- CODE:
n=int(input("digite um numero natural:"))
cont=0
soma=2
while(cont<=n):
	sinal=(-1)**cont
	cont=cont+2
	soma=soma+(-1)**(cont)*(4/div)
	i=i+1
print(round(soma,8))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma=soma+(-1)**(cont)*(4/div)
NameError: name 'div' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:07:16) 
-- CODE:
n=int(input("digite um numero natural:"))
cont=0
soma=2
while(cont<=n):
	sinal=(-1)**cont
	cont=cont+2
	soma=soma+(-1)**(cont)*(4/div)
print(round(soma,8))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma=soma+(-1)**(cont)*(4/div)
NameError: name 'div' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:08:25) 
-- CODE:
n=int(input("digite um numero natural:"))
cont=0
soma=2
while(cont<=n):
	sinal=(-1)**cont
	cont=cont+2
	soma=soma+(-1)**(cont)
print(round(soma,8))




-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:18:06) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=3
soma=2
while(cont<=n):
	sinal=(-1)**cont
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))




-- OUTPUT:
5.99444444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:18:31) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=2
soma=2
while(cont<=n):
	sinal=(-1)**cont
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))




-- OUTPUT:
5.9969697
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:19:21) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=1
soma=2
while(cont<=n):
	sinal=(-1)**cont
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))




-- OUTPUT:
5.9981685
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:19:30) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=0
soma=2
while(cont<=n):
	sinal=(-1)**cont
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))




-- OUTPUT:
5.99880952
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:21:08) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=0
soma=2
while(cont<=n):
	sinal=(-1)**cont
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))




-- OUTPUT:
5.99880952
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:21:15) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=0
soma=2
while(cont<=n):
	sinal=(-1)**cont
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))




-- OUTPUT:
5.99880952
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:21:21) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=0
soma=2
while(cont<=n):
	sinal=(-1)**cont
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))




-- OUTPUT:
5.99880952
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:21:26) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=0
soma=2
while(cont<=n):
	sinal=(-1)**cont
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))




-- OUTPUT:
5.99880952
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:29:11) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=2
soma=2
while(cont<=n):
	sinal=(-1)**cont
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))




-- OUTPUT:
5.9969697
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:31:56) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=2
soma=2
if(n==1):
	pia=3.0
	print(round(pia,8))
else:
	while(cont<n-1):
		sinal=(-1)**cont
	   cont=cont+1
	   soma=soma+2
	   pia=pia+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))




-- ERROR:
File "XXXX", line 11
    cont=cont+1
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:32:27) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=2
soma=2
if(n==1):
	pia=3.0
	print(round(pia,8))
else:
	while(cont<n-1):
		sinal=(-1)**cont
		pia=pia+sinal*4/(soma*(soma+1)*(soma+2))
	   cont=cont+1
	   soma=soma+2
	  
print(round(pia,8))




-- ERROR:
File "XXXX", line 12
    cont=cont+1
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:32:42) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=2
soma=2
if(n==1):
	pia=3.0
	print(round(pia,8))
else:
	while(cont<n-1):
		sinal=(-1)**cont
		pia=pia+sinal*4/(soma*(soma+1)*(soma+2))
	   cont=cont+1
	   soma=soma+2
print(round(pia,8))




-- ERROR:
File "XXXX", line 12
    cont=cont+1
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:33:08) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=2
soma=2
if(n==1):
	pia=3.0
	print(round(pia,8))
else:
	while(cont<n-1):
		sinal=(-1)**c
		pia=pia+sinal*4/(soma*(soma+1)*(soma+2))
	   cont=cont+1
	   soma=soma+2
print(round(pia,8))




-- ERROR:
File "XXXX", line 12
    cont=cont+1
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:33:23) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=2
soma=2
if(n==1):
	pia=3.0
	print(round(pia,8))
else:
	while(cont<n-1):
		sinal=(-1)**c
		pia=pia+sinal*4/(soma*(soma+1)*(soma+2))
	   cont=cont+1
	   soma=soma+2
print(round(pia,8))




-- ERROR:
File "XXXX", line 12
    cont=cont+1
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:33:25) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=2
soma=2
if(n==1):
	pia=3.0
	print(round(pia,8))
else:
	while(cont<n-1):
		sinal=(-1)**c
		pia=pia+sinal*4/(soma*(soma+1)*(soma+2))
	   cont=cont+1
	   soma=soma+2
print(round(pia,8))




-- ERROR:
File "XXXX", line 12
    cont=cont+1
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:33:26) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=2
soma=2
if(n==1):
	pia=3.0
	print(round(pia,8))
else:
	while(cont<n-1):
		sinal=(-1)**c
		pia=pia+sinal*4/(soma*(soma+1)*(soma+2))
	   cont=cont+1
	   soma=soma+2
print(round(pia,8))




-- ERROR:
File "XXXX", line 12
    cont=cont+1
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:33:26) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=2
soma=2
if(n==1):
	pia=3.0
	print(round(pia,8))
else:
	while(cont<n-1):
		sinal=(-1)**c
		pia=pia+sinal*4/(soma*(soma+1)*(soma+2))
	   cont=cont+1
	   soma=soma+2
print(round(pia,8))




-- ERROR:
File "XXXX", line 12
    cont=cont+1
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:33:26) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=2
soma=2
if(n==1):
	pia=3.0
	print(round(pia,8))
else:
	while(cont<n-1):
		sinal=(-1)**c
		pia=pia+sinal*4/(soma*(soma+1)*(soma+2))
	   cont=cont+1
	   soma=soma+2
print(round(pia,8))




-- ERROR:
File "XXXX", line 12
    cont=cont+1
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:33:26) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=2
soma=2
if(n==1):
	pia=3.0
	print(round(pia,8))
else:
	while(cont<n-1):
		sinal=(-1)**c
		pia=pia+sinal*4/(soma*(soma+1)*(soma+2))
	   cont=cont+1
	   soma=soma+2
print(round(pia,8))




-- ERROR:
File "XXXX", line 12
    cont=cont+1
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:33:26) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=2
soma=2
if(n==1):
	pia=3.0
	print(round(pia,8))
else:
	while(cont<n-1):
		sinal=(-1)**c
		pia=pia+sinal*4/(soma*(soma+1)*(soma+2))
	   cont=cont+1
	   soma=soma+2
print(round(pia,8))




-- ERROR:
File "XXXX", line 12
    cont=cont+1
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:33:27) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=2
soma=2
if(n==1):
	pia=3.0
	print(round(pia,8))
else:
	while(cont<n-1):
		sinal=(-1)**c
		pia=pia+sinal*4/(soma*(soma+1)*(soma+2))
	   cont=cont+1
	   soma=soma+2
print(round(pia,8))




-- ERROR:
File "XXXX", line 12
    cont=cont+1
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:33:27) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=2
soma=2
if(n==1):
	pia=3.0
	print(round(pia,8))
else:
	while(cont<n-1):
		sinal=(-1)**c
		pia=pia+sinal*4/(soma*(soma+1)*(soma+2))
	   cont=cont+1
	   soma=soma+2
print(round(pia,8))




-- ERROR:
File "XXXX", line 12
    cont=cont+1
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:33:38) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=0
soma=2
if(n==1):
	pia=3.0
	print(round(pia,8))
else:
	while(cont<n-1):
		sinal=(-1)**c
		pia=pia+sinal*4/(soma*(soma+1)*(soma+2))
	   cont=cont+1
	   soma=soma+2
print(round(pia,8))




-- ERROR:
File "XXXX", line 12
    cont=cont+1
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:34:05) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=0
soma=2
if(n==1):
	pia=3.0
	print(round(pia,8))
else:
	while(cont<n-1):
		sinal=(-1)**c
		pia=pia+sinal*4/(soma*(soma+1)*(soma+2))
	   cont=cont+1
	   soma=soma+2
print(round(pia,8))




-- ERROR:
File "XXXX", line 12
    cont=cont+1
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:34:28) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
c=0
soma=2
if(n==1):
	pia=3.0
	print(round(pia,8))
else:
	while(cont<n-1):
		sinal=(-1)**c
		pia=pia+sinal*4/(soma*(soma+1)*(soma+2))
	   c=c+1
	   soma=soma+2
print(round(pia,8))




-- ERROR:
File "XXXX", line 12
    c=c+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:35:34) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
c=0
i=2
if(n==1):
	p=3.0
	print(round(p,8))
else:
	while(cont<n-1):
		sinal=(-1)**c
		p=p+sinal*4/(i*(i+1)*(i+2))
	   c=c+1
	   soma=soma+2
print(round(p,8))




-- ERROR:
File "XXXX", line 12
    c=c+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:35:43) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
c=0
i=2
if(n==1):
	p=3.0
	print(round(p,8))
else:
	while(cont<n-1):
		sinal=(-1)**c
		p=p+sinal*4/(i*(i+1)*(i+2))
		c=c+1
	   soma=soma+2
print(round(p,8))




-- ERROR:
File "XXXX", line 13
    soma=soma+2
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:35:55) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
c=0
i=2
if(n==1):
	p=3.0
	print(round(p,8))
else:
	while(cont<n-1):
		sinal=(-1)**c
		p=p+sinal*4/(i*(i+1)*(i+2))
		c=c+1
	   i=i+2
print(round(p,8))




-- ERROR:
File "XXXX", line 13
    i=i+2
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:36:51) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=0
i=2
if(n==1):
	p=3.0
	print(round(p,8))
else:
	while(cont<n-1):
		sinal=(-1)**cont
		p=p+sinal*4/((i)*(i+1)*(i+2))
		cont=cont+1
	   i=i+2
print(round(p,8))




-- ERROR:
File "XXXX", line 13
    i=i+2
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:37:10) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=0
i=2
if(n==1):
	p=3.0
	print(round(p,8))
else:
	while(cont<n-1):
		sinal=(-1)**cont
		p=p+sinal*4/((i)*(i+1)*(i+2))
		cont=cont+1
		i=i+2
print(round(p,8))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    p=p+sinal*4/((i)*(i+1)*(i+2))
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:37:30) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=0
i=2
if(n==1):
	p=3.0
	print(round(p,8))
else:
	while(cont<n-1):
		sinal=(-1)**cont
		p= p+sinal*4/((i)*(i+1)*(i+2))
		cont=cont+1
		i=i+2
print(round(p,8))




-- EXECUTION TIME:
0.140648
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2508/main.py", line 11, in <module>
    p= p+sinal*4/((i)*(i+1)*(i+2))
NameError: name 'p' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:37:33) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=0
i=2
if(n==1):
	p=3.0
	print(round(p,8))
else:
	while(cont<n-1):
		sinal=(-1)**cont
		p= p+sinal*4/((i)*(i+1)*(i+2))
		cont=cont+1
		i=i+2
print(round(p,8))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    p= p+sinal*4/((i)*(i+1)*(i+2))
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:38:27) 
-- CODE:
n=int(input("digite um numero natural:"))
pia=3
cont=0
i=2
if(n==1):
	pia=3.0
	print(round(pia,8))
else:
	while(cont<n-1):
		sinal=(-1)**cont
		pia= pia+sinal*4/((i)*(i+1)*(i+2))
		cont=cont+1
		i=i+2
print(round(pia,8))




-- EXECUTION TIME:
0.154443
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
